--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nx/eslint-plugin": "21.1.3",
     "@nx/jest": "21.1.3",
     "@nx/js": "21.1.3",
+    "@nx/node": "^21.1.3",
     "@nx/playwright": "21.1.3",
     "@nx/react-native": "21.1.3",
     "@nx/vite": "21.1.3",
