chore: generate initial server and server-e2e apps

--- a/nx.json
+++ b/nx.json
@@ -54,7 +54,8 @@
       "plugin": "@nx/jest/plugin",
       "options": {
         "targetName": "test"
-      }
+      },
+      "exclude": ["apps/server-e2e/**/*"]
     },
     {
       "plugin": "@nx/vite/plugin",
@@ -80,6 +81,11 @@
   "targetDefaults": {
     "test": {
       "dependsOn": ["^build"]
+    },
+    "@nx/esbuild:esbuild": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   }
 }
