--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
     },
     {
       "path": "./apps/ui"
+    },
+    {
+      "path": "./apps/server-e2e"
+    },
+    {
+      "path": "./apps/server"
     }
   ]
 }
