--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@fastify/autoload": "~6.0.3",
+    "@fastify/sensible": "~6.0.2",
+    "axios": "^1.6.0",
+    "fastify": "~5.2.1",
+    "fastify-plugin": "~5.0.1",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-native": "~0.76.3"
@@ -14,6 +19,7 @@
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "21.1.3",
+    "@nx/esbuild": "21.1.3",
     "@nx/eslint": "21.1.3",
     "@nx/eslint-plugin": "21.1.3",
     "@nx/jest": "21.1.3",
@@ -33,6 +39,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/jest-native": "~5.4.3",
     "@testing-library/react-native": "~12.9.0",
     "@types/jest": "^29.5.12",
@@ -42,6 +49,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^29.7.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -51,6 +59,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-react-native": "18.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
