chore: setup nx scope tags
Used to enforce module boundaries via eslint. Currently there are three scopes: server, ui, and shared, represent app-specific modules (server and ui) and modules shared between them.

--- a/apps/ui-e2e/package.json
+++ b/apps/ui-e2e/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "nx": {
+    "tags": [
+      "scope:ui"
+    ],
     "implicitDependencies": [
       "@drop-radio/ui"
     ]
