--- a/apps/server-e2e/package.json
+++ b/apps/server-e2e/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "nx": {
+    "tags": [
+      "scope:server"
+    ],
     "implicitDependencies": [
       "@drop-radio/server"
     ],
