--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "nx": {
+    "tags": [
+      "scope:server"
+    ],
     "targets": {
       "build": {
         "executor": "@nx/esbuild:esbuild",
