--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@drop-radio/ui",
   "version": "0.0.1",
-  "private": true
+  "private": true,
+  "nx": {
+    "tags": [
+      "scope:ui"
+    ]
+  }
 }
