--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native/babel-preset": "~0.76.3",
     "@react-native/metro-config": "~0.76.3",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
@@ -63,6 +64,7 @@
     "jest-react-native": "18.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.1.3",
     "prettier": "^2.6.2",
     "react-native-svg": "~15.8.0",
@@ -79,6 +81,7 @@
     "vitest": "^3.0.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/server/ffmpeg"
   ]
 }
