chore: enable test coverage for ffmpeg library
- Set the coverage=true option for nx targets named test so that
coverage reports are generated by default

- Set ffmpeg library coverage reporter to "text" for now to support cli
runs. Need to include other reporters in the future to support CI runs.

- Set ffmpeg library coverage provider to "v8" to because the default
was reporting incorrect coverage when using the swc compiler. See
https://github.com/swc-project/swc/issues/3854 for the discussion that
suggested this fix.

--- a/nx.json
+++ b/nx.json
@@ -80,7 +80,10 @@
   ],
   "targetDefaults": {
     "test": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "options": {
+        "coverage": true
+      }
     },
     "@nx/esbuild:esbuild": {
       "cache": true,
