--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
+    "@fast-check/jest": "^2.1.1",
     "@nx/devkit": "21.1.3",
     "@nx/esbuild": "21.1.3",
     "@nx/eslint": "21.1.3",
@@ -74,6 +75,7 @@
     "react-native-web": "~0.19.13",
     "react-test-renderer": "~18.3.1",
     "ts-jest": "^29.1.0",
+    "ts-jest-mocker": "^1.3.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
