--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "fastify-plugin": "~5.0.1",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
-    "react-native": "~0.76.3"
+    "react-native": "~0.76.3",
+    "rxjs": "^7.8.2",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
