--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@drop-radio/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "docs": "typedoc --options typedoc.config.mjs"
+  },
   "private": true,
+  "nx": {},
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
     "@fastify/sensible": "~6.0.2",
@@ -61,6 +64,7 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "fast-check": "^4.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -80,6 +84,7 @@
     "ts-jest-mocker": "^1.3.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
+    "typedoc": "^0.28.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
