--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,7 +45,7 @@ jobs:
   # Deploy the documentation site to GitHub Pages. Skipped on PRs.
   deploy:
     needs: build
-    if: ${{ !github.event_name == 'pull_request' }}
+    if: ${{ github.event_name != 'pull_request' }}
 
     # Need elevated permissions to deploy to GitHub Pages
     permissions:
@@ -59,5 +59,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
+        if: ${{ github.event_name != 'pull_request' }}
         id: deployment
         uses: actions/deploy-pages@v4
