--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/server/ffmpeg"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
