gen: initial fastify stream-plugin module

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "workspaces": [
     "apps/*",
-    "libs/server/ffmpeg"
+    "libs/server/ffmpeg",
+    "libs/server/stream-plugin"
   ]
 }
