chore: update .gitignore for local environment
Add an `*.local.env` entry to the `.gitignore` file to prevent local
environment files used by nx from being tracked by Git.

Add entries for local audio input and stream output directories to the
`.gitignore` file to prevent them from being tracked by Git.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,12 @@ vitest.config.*.timestamp*
 
 # Generated documentation output
 /generated-docs
+
+# Local environment files
+*.local.env
+
+# Local audio input directory
+/server-audio-files
+
+# Local stream output directory
+/server-stream-files
