--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
     "@fastify/sensible": "~6.0.2",
+    "@fastify/static": "^8.2.0",
+    "@js-temporal/polyfill": "^0.5.1",
     "axios": "^1.6.0",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
@@ -50,7 +52,7 @@
     "@testing-library/jest-native": "~5.4.3",
     "@testing-library/react-native": "~12.9.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "^22.16.0",
     "@types/react": "~18.3.12",
     "@types/react-dom": "~18.3.1",
     "@vitejs/plugin-react": "^4.2.0",
@@ -74,6 +76,7 @@
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.1.3",
+    "pino-pretty": "^13.0.0",
     "prettier": "^2.6.2",
     "react-native-svg": "~15.8.0",
     "react-native-svg-transformer": "~1.5.0",
