--- a/libs/server/stream-plugin/package.json
+++ b/libs/server/stream-plugin/package.json
@@ -35,6 +35,15 @@
     }
   },
   "dependencies": {
-    "@swc/helpers": "~0.5.11"
+    "@drop-radio/ffmpeg": "0.0.1",
+    "@fastify/static": "^8.2.0",
+    "@js-temporal/polyfill": "^0.5.1",
+    "@swc/helpers": "~0.5.11",
+    "fastify-plugin": "^5.0.1",
+    "rxjs": "^7.8.2",
+    "tiny-invariant": "^1.3.3"
+  },
+  "peerDependencies": {
+    "fastify": "^5.0.0"
   }
 }
