chore: update ts project references (nx sync)

--- a/libs/server/stream-plugin/tsconfig.json
+++ b/libs/server/stream-plugin/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../ffmpeg"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
