--- a/libs/server/stream-plugin/tsconfig.lib.json
+++ b/libs/server/stream-plugin/tsconfig.lib.json
@@ -11,6 +11,10 @@
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
-  "references": [],
+  "references": [
+    {
+      "path": "../ffmpeg/tsconfig.lib.json"
+    }
+  ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
