--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,7 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/server/ffmpeg"
+      "path": "../../libs/server/stream-plugin"
     },
     {
       "path": "./tsconfig.app.json"
