fix: add dependency config for docs task
The root `docs` ci task was failing due the `build` task for individual
modules not being run ahead of time. Eventually, we should probably use
individualized doc tasks for each module, so that the partial docs can
be cached, but for now, the root `docs` task has simply had its
dependencies updated to include each module's `build` task.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,21 @@
     "docs": "typedoc --options typedoc.config.mjs"
   },
   "private": true,
-  "nx": {},
+  "nx": {
+    "implicitDependencies": [
+      "*"
+    ],
+    "targets": {
+      "docs": {
+        "dependsOn": [
+          "^build"
+        ],
+        "outputs": [
+          "{workspaceRoot}/generated-docs"
+        ]
+      }
+    }
+  },
   "dependencies": {
     "@fastify/autoload": "~6.0.3",
     "@fastify/sensible": "~6.0.2",
