--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@fast-check/jest": "^2.1.1",
-    "@nx/devkit": "21.1.3",
-    "@nx/esbuild": "21.1.3",
-    "@nx/eslint": "21.1.3",
-    "@nx/eslint-plugin": "21.1.3",
-    "@nx/jest": "21.1.3",
-    "@nx/js": "21.1.3",
-    "@nx/node": "^21.1.3",
-    "@nx/playwright": "21.1.3",
-    "@nx/react-native": "21.1.3",
-    "@nx/vite": "21.1.3",
-    "@nx/web": "21.1.3",
-    "@nx/workspace": "21.1.3",
+    "@nx/devkit": "21.2.2",
+    "@nx/esbuild": "21.2.2",
+    "@nx/eslint": "21.2.2",
+    "@nx/eslint-plugin": "21.2.2",
+    "@nx/jest": "21.2.2",
+    "@nx/js": "21.2.2",
+    "@nx/node": "21.2.2",
+    "@nx/playwright": "21.2.2",
+    "@nx/react-native": "21.2.2",
+    "@nx/vite": "21.2.2",
+    "@nx/web": "21.2.2",
+    "@nx/workspace": "21.2.2",
     "@playwright/test": "^1.36.0",
     "@react-native-community/cli": "~15.0.1",
     "@react-native-community/cli-platform-android": "~15.0.1",
@@ -89,7 +89,7 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.1.3",
+    "nx": "21.2.2",
     "pino-pretty": "^13.0.0",
     "prettier": "^2.6.2",
     "react-native-svg": "~15.8.0",
@@ -102,14 +102,13 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typedoc": "^0.28.7",
-    "typescript": "~5.7.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0"
   },
   "workspaces": [
     "apps/*",
-    "libs/server/ffmpeg",
-    "libs/server/stream-plugin"
+    "libs/server/*"
   ]
 }
