test: update server-e2e to use dockerized server
Added new nx targets for `docker-run` and `e2e` to the server-e2e
project that run the server in a docker container before running the e2e
tests. Also moved the test audio files to the server-e2e project to
bring them closer to the tests that use them.

Updated the global teardown script to stop the docker container after
the tests are done, but it's messy, and we might want to consider
defining it with docker compose in the future.

--- a/apps/server-e2e/package.json
+++ b/apps/server-e2e/package.json
@@ -10,6 +10,13 @@
       "@drop-radio/server"
     ],
     "targets": {
+      "docker-run": {
+        "command": "docker run --mount type=bind,src=$(pwd)/{projectRoot}/test-server-audio-files,dst=/drop-radio/server/input -p 3000:3000 -t drop-radio-server",
+        "continuous": true,
+        "dependsOn": [
+          "@drop-radio/server:docker-build"
+        ]
+      },
       "e2e": {
         "executor": "@nx/jest:jest",
         "outputs": [
@@ -20,8 +27,7 @@
           "passWithNoTests": true
         },
         "dependsOn": [
-          "@drop-radio/server:build",
-          "@drop-radio/server:serve"
+          "docker-run"
         ]
       }
     }
