chore: update server docker setup for google cloud
Set Dockerfile port to 80 so that http will map automatically on GCP VM.

Update docker-build and docker-run targets for the server app to
tag the image appropriately (:latest and :test) for production and test
builds and to use the correct audio directory in `assets`

Update server-e2e test setup and teardown to use the latest ports and
docker kill commands. Be warned, the e2e test teardown script will
kill all running containers, so that may need to change if future tests
run additional containers.

--- a/apps/server-e2e/package.json
+++ b/apps/server-e2e/package.json
@@ -10,13 +10,6 @@
       "@drop-radio/server"
     ],
     "targets": {
-      "docker-run": {
-        "command": "docker run --mount type=bind,src=$(pwd)/{projectRoot}/test-server-audio-files,dst=/drop-radio/server/input -p 3000:3000 -t drop-radio-server",
-        "continuous": true,
-        "dependsOn": [
-          "@drop-radio/server:docker-build"
-        ]
-      },
       "e2e": {
         "executor": "@nx/jest:jest",
         "outputs": [
@@ -27,7 +20,7 @@
           "passWithNoTests": true
         },
         "dependsOn": [
-          "docker-run"
+          "@drop-radio/server:docker-run"
         ]
       }
     }
