docs: update documentation workflow and README
Added instructions on how to run the server locally to the main
repo README file.

Updated the documentation workflow to use the correct asset location

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
         id: deployment
         uses: actions/upload-pages-artifact@v3
         with:
-          path: generated-docs/
+          path: assets/generated-docs/
 
   # Deploy the documentation site to GitHub Pages. Skipped on PRs.
   deploy:
