fix: add build dependencies to docs target

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "targets": {
       "docs": {
         "cache": true,
+        "dependsOn": [
+          {
+            "projects": "*",
+            "target": "build"
+          }
+        ],
         "inputs": [
           "production",
           "^production"
