--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,10 @@ jobs:
 
       - run: npm ci --legacy-peer-deps
 
-      - run: npx playwright install --with-deps
+      - run: npx playwright install
         if: steps.playwright-cache.outputs.cache-hit != 'true'
+
+      - run: npx playwright install-deps
 
       - uses: nrwl/nx-set-shas@v4
 
