--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,10 @@ on:
   workflow_dispatch:
 
 permissions:
-  packages: write
   contents: read
+  packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   build:
@@ -55,7 +57,7 @@ jobs:
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
-          registry: https://ghcr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
