chore: update server:serve deps

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -50,7 +50,7 @@
         "executor": "@nx/js:node",
         "defaultConfiguration": "development",
         "dependsOn": [
-          "build"
+          "^build"
         ],
         "options": {
           "buildTarget": "@drop-radio/server:build",
