--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "axios": "^1.6.0",
     "fastify": "~5.2.1",
     "fastify-plugin": "~5.0.1",
+    "mux.js": "^6.3.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-native": "~0.76.3",
+    "react-native-track-player": "^4.1.2",
     "rxjs": "^7.8.2",
+    "shaka-player": "^4.16.9",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
