feature: include basic deploy script

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -5,6 +5,13 @@
   "nx": {
     "tags": [
       "scope:ui"
-    ]
+    ],
+    "targets": {
+      "build": {
+        "options": {
+          "emptyOutDir": true
+        }
+      }
+    }
   }
 }
